--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,26 @@
 [tool.poetry]
-name = "package"
+name = "volumetricspy"
 version = "0.1.0"
-description = "descriptions"
-authors = ["Santiago Cuervo"]
+description = "Oil & Gas Tool for estimating Original in Place Resources"
+authors = ["Santiago Cuervo <scuervo91@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
-numpy = "^1.20.1"
-pandas = "^1.2.3"
-matplotlib = "^3.3.4"
-seaborn = "^0.11.1"
-scipy = "^1.6.1"
-pydantic = "^1.8.1"
-numpy-financial = "^1.0.0"
-PyYAML = "^5.4.1"
-statsmodels = "^0.12.2"
-openpyxl = "^3.0.7"
-pyDOE2 = "^1.3.0"
+python = ">=3.8,<3.10"
+numpy = "^1.21.2"
+matplotlib = "^3.4.3"
+pyvista = "^0.31.3"
+pandas = "^1.3.2"
+scipy = "^1.7.1"
+geopandas = "^0.9.0"
+Shapely = "^1.7.1"
+zmapio = "^0.6.0"
+scikit-image = "^0.18.2"
+pydantic = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
-notebook = "^6.2.0"
-ipykernel = "^5.5.0"
-psycopg2-binary = "^2.8.6"
-SQLAlchemy = "^1.3.23"
-mkdocs-material = "^7.0.6"
-mkdocstrings = "^0.15.0"
+notebook = "^6.4.3"
+mkdocs-material = "^7.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
