--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ Shapely = "^1.7.1"
 zmapio = "^0.6.0"
 scikit-image = "^0.18.2"
 pydantic = "^1.8.2"
+seaborn = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.4.3"
