--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ folium = "^0.12.1"
 [tool.poetry.dev-dependencies]
 notebook = "^6.4.3"
 mkdocs-material = "^7.2.4"
+ipyvtklink = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
