--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,8 @@ nav:
       - Krigging: examples/3-Points/krigging.ipynb
       - Sequential Gaussian Simulation: examples/3-Points/sgs.ipynb
       - Transforms: examples/3-Points/transforms.ipynb
+  - Releases Notes: release_notes.md
+
 
 repo_url: https://github.com/scuervo91/Volumetricspy
 repo_name: scuervo91/volumetricspy
