--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ scikit-image = "^0.18.2"
 pydantic = "^1.8.2"
 seaborn = "^0.11.2"
 folium = "^0.12.1"
+mapclassify = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.4.3"
