--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "volumetricspy"
-version = "0.1.6"
+version = "0.1.7"
 description = "Oil & Gas Tool for estimating Original in Place Resources"
 authors = ["Santiago Cuervo <scuervo91@gmail.com>"]
 license = "MIT"
@@ -20,6 +20,7 @@ pydantic = "^1.8.2"
 seaborn = "^0.11.2"
 folium = "^0.12.1"
 mapclassify = "^2.4.3"
+plotly = "^5.10.0"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.4.3"
