--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build and publish to pypi
-      uses: JRubics/poetry-publish@v1.6
+    - name: Publish python poetry package
+      uses: JRubics/poetry-publish@v1.16
       with:
         pypi_token: ${{ secrets.PYPI_TOKEN }}
