--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ zmapio = "^0.6.0"
 scikit-image = "^0.18.2"
 pydantic = "^1.8.2"
 seaborn = "^0.11.2"
-folium = "^0.12.1"
+folium = "0.13.0"
 mapclassify = "^2.4.3"
 plotly = "^5.10.0"
 
